# WakeUpBruh

./: .gitignore  CMakeLists.txt  COPYING  Readme.md  wub.cpp
.github/workflows/: cmake.yml
Testing/: CMakeLists.txt  TestTimer.cpp  testing.h
include/: Timer.hpp
